<resources>
    <string name="app_name">WeatherApp</string>
    <string name="icon_description">Weather Icon</string>
    <string name="delete">Del</string>
    <string name="recent_search">Recent Search</string>
    <string name="zipcode">Zipcode</string>
    <string name="city">City</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="search_by_zipcode">Search By zipcode</string>
</resources>
